traversal.line.traversalbyline.TraversalByLine.scala.error
Erreur de compilation :
TraversalByLine:15: error: not found: value x
    setPos(x,0)
           ^